--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "amaranjs": "^0.5.5",
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
+        "bootstrap": "^3.3.7",
         "cross-env": "^5.1",
+        "datatables.net": "^1.10.19",
+        "datatables.net-bs": "^1.10.19",
+        "datatables.net-responsive": "^2.2.3",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
+        "popper.js": "^1.12",
         "vue": "^2.5.7"
     }
 }
